# pre-commit-glassworm

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yaml  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
.task/checksum/: build
docs/: ci.md  cli.md  configuration.md  detection.md  development.md  index.md  installation.md  usage.md
src/glassworm/: __init__.py  __main__.py  cli.py  config.py  scanner.py
tests/: conftest.py  test_cli.py  test_config.py  test_scanner.py
tests/fixtures/: bidi_control.py  clean.txt  variation_selector.py  zero_width.js
