[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "pre-commit-glassworm"
version = "0.1.0"
description = "Pre-commit hook to detect GlassWorm-style invisible Unicode attacks (variation selectors, bidi controls, zero-width chars)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "SolAegis" },
]
keywords = ["pre-commit", "security", "glassworm", "unicode", "trojan-source"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
glassworm = "glassworm.cli:main"

[project.urls]
Homepage = "https://github.com/solaegis/pre-commit-glassworm"
Documentation = "https://solaegis.github.io/pre-commit-glassworm/"
Repository = "https://github.com/solaegis/pre-commit-glassworm"
Issues = "https://github.com/solaegis/pre-commit-glassworm/issues"

[tool.uv.build-backend]
module-name = "glassworm"

[dependency-groups]
dev = [
    "commitizen>=4.0.0",
    "pre-commit>=3.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "SIM", "PTH", "RUF"]
ignore = [
    "S101",   # assert allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/glassworm"]
omit = ["*/tests/*"]

[tool.glassworm]
severity = "error"
include = ["*.py", "*.js", "*.ts", "*.jsx", "*.tsx", "*.json", "*.yaml", "*.yml", "*.md", "*.txt", "*.sh", "*.bash", "*.html", "*.css", "*.xml", "*.toml", "*.ini", "*.cfg", "*.env*"]
exclude = ["vendor/", "node_modules/", ".venv/", "*.min.js", "fixtures/"]

[tool.commitizen]
version = "0.1.0"
name = "cz_conventional_commits"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true
